--- a/languages/en.json
+++ b/languages/en.json
@@ -238,9 +238,9 @@
         "content": "When this feature is enabled, whenever you click on an action in the HUD, you will be prompted with a target selection mode.\nWhile in target selection:",
         "list": {
           "0": "The number of Selected/Required targets will follow your cursor",
-          "1": "Left click (or press T) to target a token",
-          "2": "Right click to cancel target selection",
-          "3": "Press the `+` or `-` key to increase/decrease the number of maximum targets manually"
+          "1": "<span>Left click</span> or press <span>T</span> to target a token",
+          "2": "<span>Right click</span> to cancel target selection",
+          "3": "Press the <span>+</span> or <span>-</span> key to increase/decrease the number of required targets manually"
         }
       }
     }
